# Synthony

./: .dockerignore  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  Dockerfile  Dockerfile.mcp  Dockerfile.test  LICENSE.md  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  run_recommendations.py  run_server_test.py  sample_api_request.py  sample_curl_request.sh  start_api.py  start_api.sh  stop_api.py  stop_api.sh  task.md  test_api_simple.py  test_llm_with_systemprompt.py  titanic_live_test_result.json
.github/workflows/: ci.yml  cicd.yml  release.yml
ablation/: results.json  run_ablations.py
baselines/: DESIGN  common.py  knn_selector.py  random_search.py  run_baselines.py  static_heuristic.py  vanilla_llm.py
config/: SystemPrompt.md  model_capabilities.json
data/: synthony.db
docs/: ISSUE_recommender_accuracy_v7.md  MCP_SETUP.md  SERVER_GUIDE.md  Scoring_system_inspection_summary_v6.md  SystemPrompt_v1.md  SystemPrompt_v2.md  SystemPrompt_v3.md  SystemPrompt_v4.0.md  model_capabilities_v2.json  model_capabilities_v3.json  model_capabilities_v4.json  model_capabilities_v5.json  model_capabilities_v6.json  scoring_methodology.md
docs/poster/: synthony_poster.tex
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css
mcp_server/: QUICKSTART.md  README.md  requirements.txt  run_benchmark_mcp.py  server.py  test_benchmark_tools.py  test_protocol.py  test_server.py
mcp_server/prompts/: workflows.py
mcp_server/resources/: benchmark_data.py  model_registry.py  profile_cache.py
mcp_server/schemas/: resources_schema.json  tools_schema.json
mcp_server/tools/: __init__.py  benchmark_tools.py  data_tools.py  model_tools.py  profiling_tools.py  recommendation_tools.py
scripts/: README.md  analyze_benchmark_results.py  batch_analyze_datasets.py  build_ground_truth.py  compare_trials.py  evaluateScript.py  example_usage.py  generate_model_capabilities.py  optimize_scaling.py  run_benchmark_spark.sh  run_benchmark_trial1.sh  run_benchmark_trial4.sh  run_tests.sh  test_api.py  test_api_with_real_data.py
scripts/api_tests/: test_api_advanced.py  test_api_simple.py
src/synthony/: __init__.py  cli.py
tests/: README.md  conftest.py  requirements-test.txt
tests/data/: titanic_sample.csv
tests/evaluation/: test_accuracy_regression.py  test_recommender_evaluation.py
tests/functional/: __init__.py  conftest.py  test_api_advanced.py  test_api_live.py  test_api_simple.py  test_api_workflows.py  test_cli.py  test_llm_with_systemprompt.py  test_openai_connection.py  test_recommendation_methods.py  test_recommender_benchmark.py
tests/integration/: test_api_integration.py  test_end_to_end.py  test_full_pipeline.py
(+45 files in other folders)
