[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "synthony"
version = "0.1.0"
description = "Intelligent synthetic data model recommendation for tabular data"
authors = [
    {name = "Hochan Son", email = "ohsono@gmail.com"}
]
maintainers = [
    {name = "Hochan Son", email = "ohsono@gmail.com"}
]
readme = "README.md"
license = {file = "LICENSE.md"}
requires-python = ">=3.10"
keywords = ["synthetic-data", "data-profiling", "statistical-analysis", "tabular-data", "model-selection", "machine-learning", "data-synthesis"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "pydantic>=2.0.0",
    "pyarrow>=12.0.0",
    "scikit-learn>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]
polars = [
    "polars>=0.19.0",
]
cli = [
    "typer>=0.9.0",
    "rich>=13.0.0",
]
api = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.6",
    "sqlalchemy>=2.0.0",
    "python-dotenv>=1.0.0",
]
mcp = [
    "mcp>=0.9.0",
]
llm = [
    "openai>=1.10.0",
]
all = [
    "polars>=0.19.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.6",
    "sqlalchemy>=2.0.0",
    "python-dotenv>=1.0.0",
    "openai>=1.10.0",
    "mcp>=0.9.0",
]

[project.scripts]
synthony-profile = "synthony.cli:profile_command"
synthony-benchmark = "synthony.cli:benchmark_command"
synthony-api = "synthony.api.server:main"
synthony-mcp = "mcp_server.server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --cov=synthony --cov-report=term-missing"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
